# pm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  docker-compose.yml
backend/: .dockerignore  AGENTS.md  Dockerfile  pyproject.toml
backend/app/: ai.py  auth.py  db.py  main.py  repository.py
backend/static/: index.html
backend/tests/: conftest.py  test_ai.py  test_api.py  test_auth.py  test_board.py  test_chat.py
docs/: AUTH.md  CODE_REVIEW.md  DATABASE.md  PLAN.md  code_review_opencode.md
frontend/: AGENTS.md  next.config.ts  playwright.config.ts
frontend/src/components/: AuthGate.test.tsx  AuthGate.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginScreen.tsx
frontend/src/lib/: api.ts  kanban.test.ts  kanban.ts
frontend/test-results/: .last-run.json
frontend/test-results/kanban-moves-a-card-between-columns-and-it-persists-chromium/: error-context.md
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.bat  start.sh  stop.bat  stop.sh
